--- a/style.css
+++ b/style.css
@@ -4,101 +4,102 @@
   box-sizing: border-box;
 }
 body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url("./images/2201_w030_n002_291b_p1_291.jpg");
-    background-position: center;
-    background-size: cover;
-    height: 100vh;
-    opacity: 0.77;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("./images/2201_w030_n002_291b_p1_291.jpg");
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+  opacity: 0.77;
 }
-.container{
-    height: 360px;
-    width: 400px;
-    background-color: white;
-    position: relative;
-    border-radius: 15px;
-    overflow: hidden;   /* to hide the other forms*/
+.container {
+  height: 360px;
+  width: 400px;
+  background-color: white;
+  position: relative;
+  border-radius: 15px;
+  overflow: hidden; /* to hide the other forms*/
 }
-h3{
-    text-align: center;
-    margin-bottom: 35px;
-    color: #777;
+h3 {
+  text-align: center;
+  margin-bottom: 35px;
+  color: #777;
 }
-.container form{
-    width:330px ;
-    position:absolute;
-    top: 75px;
-    left :35px;
-    transition: 0.5s;
+.container form {
+  width: 330px;
+  position: absolute;
+  top: 75px;
+  left: 35px;
+  transition: 0.5s;
 }
-form input{
-    width: 100%;
-    padding: 10px 5px;
-    margin: 5px 0;
-    border: none;
-    border-bottom: 1px solid black;
-    background: transparent;
-    outline: none;
+form input {
+  width: 100%;
+  padding: 10px 5px;
+  margin: 5px 0;
+  border: none;
+  border-bottom: 1px solid black;
+  background: transparent;
+  outline: none;
 }
-::placeholder{
-    color: black;
+::placeholder {
+  color: black;
 }
-.btn-box{
-    width: 100%;
-    margin: 30px auto;
-    text-align: center;
-    font-weight: bold;
+.btn-box {
+  width: 100%;
+  margin: 30px auto;
+  text-align: center;
+  font-weight: bold;
 }
-form button{
-    width: 118px;
-    height: 35px ;
-    margin: 0 10px;
-    background-image: linear-gradient(to top left,#2f2f71, #7a589c 55%);
-    border-radius: 15px;
-    color: white;
-    outline: 1px solid rgb(190, 180, 180);
-    cursor: pointer;
+form button {
+  width: 118px;
+  height: 35px;
+  margin: 0 10px;
+  background-image: linear-gradient(to top left, #2f2f71, #7a589c 55%);
+  border-radius: 15px;
+  color: white;
+  outline: 1px solid rgb(190, 180, 180);
+  cursor: pointer;
 }
 
-#form2{
-    left: 450px;
+#form2 {
+  left: 450px;
 }
-#form3{
-    left: 450px;
+#form3 {
+  left: 450px;
 }
-.step-row{
-    width: 400px;
-    height: 40px;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    box-shadow: 0 -1px 5px -1px #000;
-    position: relative;
+.step-row {
+  width: 400px;
+  height: 40px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  box-shadow: 0 -1px 5px -1px #000;
+  position: relative;
 }
-.step-col{
-    width: 133.3px;
-    text-align: center;
-    color: #333;
-    position: relative;
-    color: white;
+.step-col {
+  width: 133.3px;
+  text-align: center;
+  color: #333;
+  position: relative;
+  color: white;
 }
-#progress{
-    position: absolute;
-    height: 100%;
-    width: 120px;
-    background: linear-gradient(to right,#292965 9%, #502c74 80%);
-    transition: 0.9s;
+#progress {
+  position: absolute;
+  height: 100%;
+  width: 120px;
+  background: linear-gradient(to right, #292965 9%, #502c74 80%);
+  transition: 0.9s;
 }
-#progress::after{
-    content: '';
-    height: 0px;
-    width: 0px;
-    border-top: 20px solid transparent;
-    border-bottom: 20px solid transparent;
-    position: absolute;
-    right: -20px;
-    top: 0;
-    border-left: 20px solid rgba(59, 18, 91, 0.878) ;
+#progress::after {
+  content: "";
+  height: 0px;
+  width: 0px;
+  border-top: 20px solid transparent;
+  border-bottom: 20px solid transparent;
+  position: absolute;
+  right: -20px;
+  top: 0;
+  border-left: 20px solid rgba(59, 18, 91, 0.878);
 }
